src/application-layouts/SecondaryNavigationLayout.module.scss
@import '../breakpoints/media-queries';

:local {
  .active-button,
  .active-button:hover {
    background-color:rgba(25, 127, 229, 0.2);
    border: solid 1px #4a90e2;

    &:active {
      background-color:rgba(25, 127, 229, 0.5);
    }
  }

  .side-nav-container {
    align-items: flex-start;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    height: 100%;
    justify-content: stretch;
    overflow: hidden;
    position: relative;
  }

  .side-nav-sidebar {
    background-color: white;
    border-right: 1px solid grey;
    display: none;
    flex: 0 0 auto;
    height: 100%;
    width: 200px;

    &.visible {
      display: block;
    }

    &.overlay {
      position: absolute;
      width: calc(100% - 50px);
      left: 0;
      top: 0;
      bottom: 0;
      z-index: 6;

      @include terra-mq-medium-up {
        width: 200px;
      }
    }
  }

  .side-nav-body {
    align-items: flex-start;
    display: flex;
    flex: 1 1 auto;
    flex-direction: row;
    flex-wrap: nowrap;
    height: 100%;
    justify-content: stretch;
    overflow: hidden;
  }

  .page-body {
    border-right: 1px solid rgba(0, 0, 0, 0.75);
    flex: 1 1 320px;
    height: 100%;
    overflow: hidden;

    .workspace-visible.workspace-split & {
      flex: 1 1 auto;
    }
  }

  .workspace {
    background-color: white;
    display: none;
    flex: 1 1 320px;
    height: 100%;
    position: relative;
    z-index: 2;

    .workspace-visible.workspace-split & {
      flex: 0 0 auto;
      width: 320px; // fix small width to 320
    }

    &.visible {
      display: block;
    }

    &.overlay {
      border-left: 1px solid rgba(0, 0, 0, 0.75);
      position: absolute;
      width: calc(100% - 40px);
      right: 0;
      top: 0;
      bottom: 0;
    }
  }
}

